# cmake_example

./: CMakeLists.txt
src/: example.cpp
